fix(ags): fix slider box icons alignement

--- a/config/ags/scss/widgets/quick-settings.scss
+++ b/config/ags/scss/widgets/quick-settings.scss
@@ -125,7 +125,8 @@
 
   .slider-label {
     font-size: 30px;
-    min-width: 30px;
+    min-width: 40px;
+    margin-right: -20px;
   }
 
   scale {
