--- a/config/ags/style.css
+++ b/config/ags/style.css
@@ -556,7 +556,8 @@ calendar:indeterminate {
   margin-bottom: 20px; }
   .slider-box .slider-label {
     font-size: 30px;
-    min-width: 30px; }
+    min-width: 40px;
+    margin-right: -20px; }
   .slider-box scale {
     min-height: 55px;
     min-width: 400px;
